# Legal-AI-Assistant

./: OVERVIEW.md  README.md  VietLex.ipynb  pyproject.toml  requirements.txt
src/legal_ingestion/: chroma_store.py  chunking.py  parsers.py  schemas.py  sqlite_store.py  text.py
