[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r2ai-legal-ingestion"
version = "0.1.0"
description = "Legal document parser, chunker, SQLite store, and ChromaDB index builder for R2AI legal assistant task."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
